# aerial-autonomy-stack

./: .gitattributes  .gitignore  README.md
.github/workflows/: aas-gym-pip-install.yml  weekly-ground-amd64-build.yml
aas-gym/: pyproject.toml
aas-gym/src/aas_gym/: aas_env.py
aircraft/: aircraft.yml.erb
aircraft/aircraft_resources/comms/: zenoh_config_air.json5.erb
aircraft/aircraft_resources/missions/: test_mission.yaml
aircraft/aircraft_resources/patches/: cancellable_action.py  request_mavlink_streams.py
aircraft/aircraft_resources/scripts/: gymnasium_setup.py
aircraft/aircraft_ws/src/autopilot_interface/src/: ardupilot_interface.cpp  ardupilot_interface.hpp  px4_interface.cpp
aircraft/aircraft_ws/src/autopilot_interface_msgs/srv/: SetReposition.srv
aircraft/aircraft_ws/src/mission/: package.xml
aircraft/aircraft_ws/src/mission/mission/: mission_node.py
aircraft/aircraft_ws/src/state_sharing/src/: state_sharing_node.cpp
aircraft/aircraft_ws/src/yolo_inference/yolo_inference/: yolo_inference_node.py
aircraft/aircraft_ws/src/yolo_inference_py/: package.xml  setup.cfg  setup.py
aircraft/aircraft_ws/src/yolo_py/yolo_py/: yolo_node.py
ground/: ground.yml.erb
ground/ground_ws/src/ground_system/: CMakeLists.txt  package.xml
ground/ground_ws/src/ground_system/ground_system/: oracle.py
ground/ground_ws/src/ground_system/src/: ground_system.cpp  ground_system.hpp
scripts/: deploy_build.sh  deploy_run.sh  gym_run.py  gymnasium_examples.py  sim_build.sh  sim_run.sh
scripts/docker/: Dockerfile.aircraft  Dockerfile.ground  Dockerfile.simulation
simulation/: simulation.yml.erb
simulation/simulation_resources/aircraft_models/: _create_ardupilot_models.sh
simulation/simulation_resources/aircraft_models/alti_transition_quad/: ardupilot-4.6.params  model.sdf
simulation/simulation_resources/aircraft_models/iris_with_ardupilot/: ardupilot-4.6.params  model.config  model.sdf
simulation/simulation_resources/aircraft_models/standard_vtol/: 5141_gz_aas_standard_vtol  model.config
simulation/simulation_resources/aircraft_models/x500/: 5140_gz_aas_x500  model.config
simulation/simulation_resources/comms/: gz_to_gst_image_bridge.py
simulation/simulation_resources/comms/gz_gst_bridge/: gz_gst_bridge.cpp
simulation/simulation_resources/patches/: extract_spherical_coords.py
simulation/simulation_resources/scripts/: gz_step.py  plot_logs.sh
simulation/simulation_resources/simulation_worlds/: _create_ardupilot_world.sh  esefex_fbx.sdf
simulation/simulation_resources/simulation_worlds/esefex_fbx/: 4b4aa35d88b5_gltf_tile_1.fbx
simulation/simulation_resources/simulation_worlds/fog_generator/: model.sdf
simulation/simulation_resources/simulation_worlds/ime-target/: model.config  model.sdf
simulation/simulation_resources/simulation_worlds/ime-target/meshes/: ime-target.glb
simulation/simulation_ws/src/zmq_bridge_cpp/: CMakeLists.txt  package.xml
simulation/simulation_ws/src/zmq_bridge_cpp/src/: zeromq_bridge.cpp
supplementary/: RATIONALE.md  REQUIREMENTS_UBUNTU.md  REQUIREMENTS_WSL.md  SETUP_AVIONICS.md
