[tool.poetry]
name = "aas-gym"
version = "1.0.0"
description = "Gymnasium wrapper for the aerial-autonomy-stack"
authors = ["Jacopo Panerati <jacopo.panerati@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/JacopoPan/aerial-autonomy-stack"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3"
scipy = "^1.16"
matplotlib = "^3.10"
gymnasium = "^1.2"
stable-baselines3 = "^2.7.0"
docker = "^7.1"
pyzmq = "^27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
