<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zmq_bridge_cpp</name>
  <version>0.1.0</version>
  <description>C++ ZMQ Bridge for Gazebo and ROS 2</description>
  <maintainer email="jacopo.pan@gmail.com">JacopoPan</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>libzmq3-dev</depend>
  <!-- <depend>gz-transport13</depend> -->
  <!-- <depend>gz-msgs10</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
